add houses api fix the issue
